// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LPA Questionnaire review GET /lpa-questionnaire/1/add-document-details/:folderId/ should render a 500 error page if fileUploadInfo is not present in the session 1`] = `
"<main class="govuk-main-wrapper " id="main-content" role="main">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <h1 class="govuk-heading-xl">Sorry, there is a problem with the service</h1>
            <p class="govuk-body">Try again later.</p>
            <p class="govuk-body"><a href="https://has-appeal.herokuapp.com/help/contact" class="govuk-link">Contact the Planning Inspectorate Customer Support</a> if
                the problem persists.</p>
        </div>
    </div>
</main>"
`;

exports[`LPA Questionnaire review GET /lpa-questionnaire/1/add-document-details/:folderId/ should render the add document details page with one item per unpublished document, and with a late entry status tag and associated details component, if the folder is additional documents, and the lpa questionnaire has a validation outcome of complete 1`] = `
"<main class="govuk-main-wrapper " id="main-content" role="main">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full"><span class="govuk-caption-l govuk-!-margin-bottom-3">Add document details</span>
                    <h1                     class="govuk-heading-l govuk-!-margin-bottom-3">Additional documents</h1>
                </div>
            </div>
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full govuk-!-margin-top-3 govuk-!-margin-bottom-5"><strong class="govuk-tag govuk-tag--pink single-line">Late entry</strong>
                </div>
            </div>
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <details class="govuk-details" data-module="govuk-details">
                        <summary class="govuk-details__summary"><span class="govuk-details__summary-text"> What is late entry?</span>
                        </summary>
                        <div class="govuk-details__text">Additional documents are marked as late entries when the appellant case
                            or LPA questionnaire to which they are being added has already been reviewed
                            as valid or complete.</div>
                    </details>
                </div>
            </div>
            <form method="post" novalidate="novalidate">
                <div class="govuk-form-group">
                    <h2 class="govuk-heading-m">test-document.txt</h2>
                    <div class="govuk-form-group">
                        <input class="govuk-input" id="" name="items[0][documentId]" type="hidden"
                        value="1">
                    </div>
                    <div class="govuk-form-group">
                        <fieldset class="govuk-fieldset" role="group">
                            <legend class="govuk-fieldset__legend">Date received</legend>
                            <div class="govuk-date-input" id="items[0]receivedDate">
                                <div class="govuk-date-input__item">
                                    <div class="govuk-form-group">
                                        <label class="govuk-label govuk-date-input__label" for="items[0].receivedDate.day">Day</label>
                                        <input class="govuk-input govuk-date-input__input govuk-input govuk-date-input__input govuk-input--width-2"
                                        id="items[0].receivedDate.day" name="items[0][receivedDate]-[day]" type="text"
                                        value="3" inputmode="numeric">
                                    </div>
                                </div>
                                <div class="govuk-date-input__item">
                                    <div class="govuk-form-group">
                                        <label class="govuk-label govuk-date-input__label" for="items[0].receivedDate.month">Month</label>
                                        <input class="govuk-input govuk-date-input__input govuk-input govuk-date-input__input govuk-input--width-2"
                                        id="items[0].receivedDate.month" name="items[0][receivedDate]-[month]"
                                        type="text" value="6" inputmode="numeric">
                                    </div>
                                </div>
                                <div class="govuk-date-input__item">
                                    <div class="govuk-form-group">
                                        <label class="govuk-label govuk-date-input__label" for="items[0].receivedDate.year">Year</label>
                                        <input class="govuk-input govuk-date-input__input govuk-input govuk-date-input__input govuk-input--width-4"
                                        id="items[0].receivedDate.year" name="items[0][receivedDate]-[year]" type="text"
                                        value="2024" inputmode="numeric">
                                    </div>
                                </div>
                            </div>
                        </fieldset>
                    </div>
                    <div class="govuk-form-group">
                        <fieldset class="govuk-fieldset">
                            <legend class="govuk-fieldset__legend">Redaction status</legend>
                            <div class="govuk-radios" data-module="govuk-radios">
                                <div class="govuk-radios__item">
                                    <input class="govuk-radios__input" id="items[0][redactionStatus]" name="items[0][redactionStatus]"
                                    type="radio" value="redacted">
                                    <label class="govuk-label govuk-radios__label" for="items[0][redactionStatus]">Redacted</label>
                                </div>
                                <div class="govuk-radios__item">
                                    <input class="govuk-radios__input" id="items[0][redactionStatus]-2" name="items[0][redactionStatus]"
                                    type="radio" value="unredacted" checked>
                                    <label class="govuk-label govuk-radios__label" for="items[0][redactionStatus]-2">Unredacted</label>
                                </div>
                                <div class="govuk-radios__divider">Or</div>
                                <div class="govuk-radios__item">
                                    <input class="govuk-radios__input" id="items[0][redactionStatus]-4" name="items[0][redactionStatus]"
                                    type="radio" value="no redaction required">
                                    <label class="govuk-label govuk-radios__label" for="items[0][redactionStatus]-4">No redaction required</label>
                                </div>
                            </div>
                        </fieldset>
                    </div>
                </div>
                <button type="submit" class="govuk-button" data-module="govuk-button">Confirm</button>
            </form>
        </div>
    </div>
</main>"
`;

exports[`LPA Questionnaire review GET /lpa-questionnaire/1/add-document-details/:folderId/ should render the add document details page with one item per unpublished document, and without a late entry status tag and associated details component, if the folder is additional documents, and the lpa questionnaire has a validation outcome of incomplete 1`] = `
"<main class="govuk-main-wrapper " id="main-content" role="main">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full"><span class="govuk-caption-l govuk-!-margin-bottom-3">Add document details</span>
                    <h1                     class="govuk-heading-l govuk-!-margin-bottom-6">Additional documents</h1>
                </div>
            </div>
            <form method="post" novalidate="novalidate">
                <div class="govuk-form-group">
                    <h2 class="govuk-heading-m">test-document.txt</h2>
                    <div class="govuk-form-group">
                        <input class="govuk-input" id="" name="items[0][documentId]" type="hidden"
                        value="1">
                    </div>
                    <div class="govuk-form-group">
                        <fieldset class="govuk-fieldset" role="group">
                            <legend class="govuk-fieldset__legend">Date received</legend>
                            <div class="govuk-date-input" id="items[0]receivedDate">
                                <div class="govuk-date-input__item">
                                    <div class="govuk-form-group">
                                        <label class="govuk-label govuk-date-input__label" for="items[0].receivedDate.day">Day</label>
                                        <input class="govuk-input govuk-date-input__input govuk-input govuk-date-input__input govuk-input--width-2"
                                        id="items[0].receivedDate.day" name="items[0][receivedDate]-[day]" type="text"
                                        value="3" inputmode="numeric">
                                    </div>
                                </div>
                                <div class="govuk-date-input__item">
                                    <div class="govuk-form-group">
                                        <label class="govuk-label govuk-date-input__label" for="items[0].receivedDate.month">Month</label>
                                        <input class="govuk-input govuk-date-input__input govuk-input govuk-date-input__input govuk-input--width-2"
                                        id="items[0].receivedDate.month" name="items[0][receivedDate]-[month]"
                                        type="text" value="6" inputmode="numeric">
                                    </div>
                                </div>
                                <div class="govuk-date-input__item">
                                    <div class="govuk-form-group">
                                        <label class="govuk-label govuk-date-input__label" for="items[0].receivedDate.year">Year</label>
                                        <input class="govuk-input govuk-date-input__input govuk-input govuk-date-input__input govuk-input--width-4"
                                        id="items[0].receivedDate.year" name="items[0][receivedDate]-[year]" type="text"
                                        value="2024" inputmode="numeric">
                                    </div>
                                </div>
                            </div>
                        </fieldset>
                    </div>
                    <div class="govuk-form-group">
                        <fieldset class="govuk-fieldset">
                            <legend class="govuk-fieldset__legend">Redaction status</legend>
                            <div class="govuk-radios" data-module="govuk-radios">
                                <div class="govuk-radios__item">
                                    <input class="govuk-radios__input" id="items[0][redactionStatus]" name="items[0][redactionStatus]"
                                    type="radio" value="redacted">
                                    <label class="govuk-label govuk-radios__label" for="items[0][redactionStatus]">Redacted</label>
                                </div>
                                <div class="govuk-radios__item">
                                    <input class="govuk-radios__input" id="items[0][redactionStatus]-2" name="items[0][redactionStatus]"
                                    type="radio" value="unredacted" checked>
                                    <label class="govuk-label govuk-radios__label" for="items[0][redactionStatus]-2">Unredacted</label>
                                </div>
                                <div class="govuk-radios__divider">Or</div>
                                <div class="govuk-radios__item">
                                    <input class="govuk-radios__input" id="items[0][redactionStatus]-4" name="items[0][redactionStatus]"
                                    type="radio" value="no redaction required">
                                    <label class="govuk-label govuk-radios__label" for="items[0][redactionStatus]-4">No redaction required</label>
                                </div>
                            </div>
                        </fieldset>
                    </div>
                </div>
                <button type="submit" class="govuk-button" data-module="govuk-button">Confirm</button>
            </form>
        </div>
    </div>
</main>"
`;

exports[`LPA Questionnaire review GET /lpa-questionnaire/1/add-document-details/:folderId/ should render the add document details page with one item per unpublished document, and without a late entry status tag and associated details component, if the folder is additional documents, and the lpa questionnaire has no validation outcome 1`] = `
"<main class="govuk-main-wrapper " id="main-content" role="main">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full"><span class="govuk-caption-l govuk-!-margin-bottom-3">Add document details</span>
                    <h1                     class="govuk-heading-l govuk-!-margin-bottom-6">Additional documents</h1>
                </div>
            </div>
            <form method="post" novalidate="novalidate">
                <div class="govuk-form-group">
                    <h2 class="govuk-heading-m">test-document.txt</h2>
                    <div class="govuk-form-group">
                        <input class="govuk-input" id="" name="items[0][documentId]" type="hidden"
                        value="1">
                    </div>
                    <div class="govuk-form-group">
                        <fieldset class="govuk-fieldset" role="group">
                            <legend class="govuk-fieldset__legend">Date received</legend>
                            <div class="govuk-date-input" id="items[0]receivedDate">
                                <div class="govuk-date-input__item">
                                    <div class="govuk-form-group">
                                        <label class="govuk-label govuk-date-input__label" for="items[0].receivedDate.day">Day</label>
                                        <input class="govuk-input govuk-date-input__input govuk-input govuk-date-input__input govuk-input--width-2"
                                        id="items[0].receivedDate.day" name="items[0][receivedDate]-[day]" type="text"
                                        value="3" inputmode="numeric">
                                    </div>
                                </div>
                                <div class="govuk-date-input__item">
                                    <div class="govuk-form-group">
                                        <label class="govuk-label govuk-date-input__label" for="items[0].receivedDate.month">Month</label>
                                        <input class="govuk-input govuk-date-input__input govuk-input govuk-date-input__input govuk-input--width-2"
                                        id="items[0].receivedDate.month" name="items[0][receivedDate]-[month]"
                                        type="text" value="6" inputmode="numeric">
                                    </div>
                                </div>
                                <div class="govuk-date-input__item">
                                    <div class="govuk-form-group">
                                        <label class="govuk-label govuk-date-input__label" for="items[0].receivedDate.year">Year</label>
                                        <input class="govuk-input govuk-date-input__input govuk-input govuk-date-input__input govuk-input--width-4"
                                        id="items[0].receivedDate.year" name="items[0][receivedDate]-[year]" type="text"
                                        value="2024" inputmode="numeric">
                                    </div>
                                </div>
                            </div>
                        </fieldset>
                    </div>
                    <div class="govuk-form-group">
                        <fieldset class="govuk-fieldset">
                            <legend class="govuk-fieldset__legend">Redaction status</legend>
                            <div class="govuk-radios" data-module="govuk-radios">
                                <div class="govuk-radios__item">
                                    <input class="govuk-radios__input" id="items[0][redactionStatus]" name="items[0][redactionStatus]"
                                    type="radio" value="redacted">
                                    <label class="govuk-label govuk-radios__label" for="items[0][redactionStatus]">Redacted</label>
                                </div>
                                <div class="govuk-radios__item">
                                    <input class="govuk-radios__input" id="items[0][redactionStatus]-2" name="items[0][redactionStatus]"
                                    type="radio" value="unredacted" checked>
                                    <label class="govuk-label govuk-radios__label" for="items[0][redactionStatus]-2">Unredacted</label>
                                </div>
                                <div class="govuk-radios__divider">Or</div>
                                <div class="govuk-radios__item">
                                    <input class="govuk-radios__input" id="items[0][redactionStatus]-4" name="items[0][redactionStatus]"
                                    type="radio" value="no redaction required">
                                    <label class="govuk-label govuk-radios__label" for="items[0][redactionStatus]-4">No redaction required</label>
                                </div>
                            </div>
                        </fieldset>
                    </div>
                </div>
                <button type="submit" class="govuk-button" data-module="govuk-button">Confirm</button>
            </form>
        </div>
    </div>
</main>"
`;

exports[`LPA Questionnaire review GET /lpa-questionnaire/1/add-document-details/:folderId/ should render the add document details page with one item per unpublished document, and without a late entry status tag and associated details component, if the folder is not additional documents 1`] = `
"<main class="govuk-main-wrapper " id="main-content" role="main">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full"><span class="govuk-caption-l govuk-!-margin-bottom-3">Add document details</span>
                    <h1                     class="govuk-heading-l govuk-!-margin-bottom-6">Changed description documents</h1>
                </div>
            </div>
            <form method="post" novalidate="novalidate">
                <div class="govuk-form-group">
                    <h2 class="govuk-heading-m">test-document.txt</h2>
                    <div class="govuk-form-group">
                        <input class="govuk-input" id="" name="items[0][documentId]" type="hidden"
                        value="1">
                    </div>
                    <div class="govuk-form-group">
                        <fieldset class="govuk-fieldset" role="group">
                            <legend class="govuk-fieldset__legend">Date received</legend>
                            <div class="govuk-date-input" id="items[0]receivedDate">
                                <div class="govuk-date-input__item">
                                    <div class="govuk-form-group">
                                        <label class="govuk-label govuk-date-input__label" for="items[0].receivedDate.day">Day</label>
                                        <input class="govuk-input govuk-date-input__input govuk-input govuk-date-input__input govuk-input--width-2"
                                        id="items[0].receivedDate.day" name="items[0][receivedDate]-[day]" type="text"
                                        value="3" inputmode="numeric">
                                    </div>
                                </div>
                                <div class="govuk-date-input__item">
                                    <div class="govuk-form-group">
                                        <label class="govuk-label govuk-date-input__label" for="items[0].receivedDate.month">Month</label>
                                        <input class="govuk-input govuk-date-input__input govuk-input govuk-date-input__input govuk-input--width-2"
                                        id="items[0].receivedDate.month" name="items[0][receivedDate]-[month]"
                                        type="text" value="6" inputmode="numeric">
                                    </div>
                                </div>
                                <div class="govuk-date-input__item">
                                    <div class="govuk-form-group">
                                        <label class="govuk-label govuk-date-input__label" for="items[0].receivedDate.year">Year</label>
                                        <input class="govuk-input govuk-date-input__input govuk-input govuk-date-input__input govuk-input--width-4"
                                        id="items[0].receivedDate.year" name="items[0][receivedDate]-[year]" type="text"
                                        value="2024" inputmode="numeric">
                                    </div>
                                </div>
                            </div>
                        </fieldset>
                    </div>
                    <div class="govuk-form-group">
                        <fieldset class="govuk-fieldset">
                            <legend class="govuk-fieldset__legend">Redaction status</legend>
                            <div class="govuk-radios" data-module="govuk-radios">
                                <div class="govuk-radios__item">
                                    <input class="govuk-radios__input" id="items[0][redactionStatus]" name="items[0][redactionStatus]"
                                    type="radio" value="redacted">
                                    <label class="govuk-label govuk-radios__label" for="items[0][redactionStatus]">Redacted</label>
                                </div>
                                <div class="govuk-radios__item">
                                    <input class="govuk-radios__input" id="items[0][redactionStatus]-2" name="items[0][redactionStatus]"
                                    type="radio" value="unredacted" checked>
                                    <label class="govuk-label govuk-radios__label" for="items[0][redactionStatus]-2">Unredacted</label>
                                </div>
                                <div class="govuk-radios__divider">Or</div>
                                <div class="govuk-radios__item">
                                    <input class="govuk-radios__input" id="items[0][redactionStatus]-4" name="items[0][redactionStatus]"
                                    type="radio" value="no redaction required">
                                    <label class="govuk-label govuk-radios__label" for="items[0][redactionStatus]-4">No redaction required</label>
                                </div>
                            </div>
                        </fieldset>
                    </div>
                </div>
                <button type="submit" class="govuk-button" data-module="govuk-button">Confirm</button>
            </form>
        </div>
    </div>
</main>"
`;
